--- a/IntelliasTest/IntelliasTest.vcxproj
+++ b/IntelliasTest/IntelliasTest.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="inputData.csv" />
+    <None Include="report.csv" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
