Some minor fixes

--- a/IntelliasTest/IntelliasTest.vcxproj
+++ b/IntelliasTest/IntelliasTest.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="timeTrackingReport.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="commaData.csv" />
     <None Include="inputData.csv" />
     <None Include="report.csv" />
   </ItemGroup>
